// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gauge should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gauge__Wrapper-sc-895a5s-0 QCzOC"
      >
        <img
          src="/static/ambient_temperature.png"
        />
        <div>
          <svg
            class="speedometer"
            height="150"
            width="150"
          >
            <g
              class="arc"
              transform="translate(75,75)"
            >
              <path
                class="speedo-segment"
                d="M-55,-6.735557395310443e-15A55,55,0,0,1,-54.56630857229628,-6.893327846036749L-34.72401454600672,-4.386663174750659A35,35,0,0,0,-35,-4.2862637970157365e-15Z"
                fill="rgb(0, 128, 0)"
              />
              <path
                class="speedo-segment"
                d="M-54.56630857229628,-6.893327846036749A55,55,0,0,1,-53.272073862074706,-13.677943794067039L-33.900410639502084,-8.704146050769934A35,35,0,0,0,-34.72401454600672,-4.386663174750659Z"
                fill="rgb(11, 133, 0)"
              />
              <path
                class="speedo-segment"
                d="M-53.272073862074706,-13.677943794067039A55,55,0,0,1,-51.13770672385383,-20.246850397657276L-32.5421770060888,-12.884359343963721A35,35,0,0,0,-33.900410639502084,-8.704146050769934Z"
                fill="rgb(22, 138, 0)"
              />
              <path
                class="speedo-segment"
                d="M-51.13770672385383,-20.246850397657276A55,55,0,0,1,-48.196867402412494,-26.496452075594338L-30.670733801535224,-16.861378593560033A35,35,0,0,0,-32.5421770060888,-12.884359343963721Z"
                fill="rgb(34, 143, 0)"
              />
              <path
                class="speedo-segment"
                d="M-48.196867402412494,-26.496452075594338A55,55,0,0,1,-44.49593469062211,-32.32818887608603L-28.315594803123158,-20.572483830236564A35,35,0,0,0,-30.670733801535224,-16.861378593560033Z"
                fill="rgb(47, 148, 0)"
              />
              <path
                class="speedo-segment"
                d="M-44.49593469062211,-32.32818887608603A55,55,0,0,1,-40.09327450817762,-37.650090826077886L-25.513901959749397,-23.95914870750411A35,35,0,0,0,-28.315594803123158,-20.572483830236564Z"
                fill="rgb(61, 153, 0)"
              />
              <path
                class="speedo-segment"
                d="M-40.09327450817762,-37.650090826077886A55,55,0,0,1,-35.05831943617792,-42.37822835266842L-22.309839641204128,-26.96796349715263A35,35,0,0,0,-25.513901959749397,-23.95914870750411Z"
                fill="rgb(76, 158, 0)"
              />
              <path
                class="speedo-segment"
                d="M-35.05831943617792,-42.37822835266842A55,55,0,0,1,-29.470473723844805,-46.438035902610835L-18.753937824264874,-29.551477392570533A35,35,0,0,0,-22.309839641204128,-26.96796349715263Z"
                fill="rgb(92, 164, 0)"
              />
              <path
                class="speedo-segment"
                d="M-29.470473723844805,-46.438035902610835A55,55,0,0,1,-23.417861036079,-49.76548788563107L-14.902275204777546,-31.66894683631068A35,35,0,0,0,-18.753937824264874,-29.551477392570533Z"
                fill="rgb(108, 169, 0)"
              />
              <path
                class="speedo-segment"
                d="M-23.417861036079,-49.76548788563107A55,55,0,0,1,-16.995934690622104,-52.30810839623345L-10.815594803123156,-33.28697807033038A35,35,0,0,0,-14.902275204777546,-31.66894683631068Z"
                fill="rgb(125, 174, 0)"
              />
              <path
                class="speedo-segment"
                d="M-16.995934690622104,-52.30810839623345A55,55,0,0,1,-10.305972302214853,-54.02579879007788L-6.558346010500361,-34.3800537755041A35,35,0,0,0,-10.815594803123156,-33.28697807033038Z"
                fill="rgb(143, 179, 0)"
              />
              <path
                class="speedo-segment"
                d="M-10.305972302214853,-54.02579879007788A55,55,0,0,1,-3.453478574112237,-54.891470063554934L-2.1976681835259693,-34.930935494989505A35,35,0,0,0,-6.558346010500361,-34.3800537755041Z"
                fill="rgb(162, 184, 0)"
              />
              <path
                class="speedo-segment"
                d="M-3.453478574112237,-54.891470063554934A55,55,0,0,1,3.453478574112244,-54.891470063554934L2.1976681835259733,-34.930935494989505A35,35,0,0,0,-2.1976681835259693,-34.930935494989505Z"
                fill="rgb(181, 189, 0)"
              />
              <path
                class="speedo-segment"
                d="M3.453478574112244,-54.891470063554934A55,55,0,0,1,10.30597230221487,-54.02579879007787L6.558346010500372,-34.3800537755041A35,35,0,0,0,2.1976681835259733,-34.930935494989505Z"
                fill="rgb(194, 186, 0)"
              />
              <path
                class="speedo-segment"
                d="M10.30597230221487,-54.02579879007787A55,55,0,0,1,16.99593469062211,-52.30810839623344L10.815594803123162,-33.28697807033037A35,35,0,0,0,6.558346010500372,-34.3800537755041Z"
                fill="rgb(199, 175, 0)"
              />
              <path
                class="speedo-segment"
                d="M16.99593469062211,-52.30810839623344A55,55,0,0,1,23.417861036079007,-49.76548788563107L14.902275204777549,-31.66894683631068A35,35,0,0,0,10.815594803123162,-33.28697807033037Z"
                fill="rgb(204, 163, 0)"
              />
              <path
                class="speedo-segment"
                d="M23.417861036079007,-49.76548788563107A55,55,0,0,1,29.470473723844822,-46.43803590261082L18.753937824264888,-29.551477392570522A35,35,0,0,0,14.902275204777549,-31.66894683631068Z"
                fill="rgb(209, 151, 0)"
              />
              <path
                class="speedo-segment"
                d="M29.470473723844822,-46.43803590261082A55,55,0,0,1,35.05831943617793,-42.37822835266841L22.30983964120414,-26.967963497152624A35,35,0,0,0,18.753937824264888,-29.551477392570522Z"
                fill="rgb(214, 137, 0)"
              />
              <path
                class="speedo-segment"
                d="M35.05831943617793,-42.37822835266841A55,55,0,0,1,40.09327450817764,-37.650090826077864L25.513901959749408,-23.9591487075041A35,35,0,0,0,22.30983964120414,-26.967963497152624Z"
                fill="rgb(219, 123, 0)"
              />
              <path
                class="speedo-segment"
                d="M40.09327450817764,-37.650090826077864A55,55,0,0,1,44.49593469062211,-32.328188876086024L28.31559480312316,-20.57248383023656A35,35,0,0,0,25.513901959749408,-23.9591487075041Z"
                fill="rgb(225, 108, 0)"
              />
              <path
                class="speedo-segment"
                d="M44.49593469062211,-32.328188876086024A55,55,0,0,1,48.196867402412494,-26.496452075594352L30.67073380153522,-16.86137859356004A35,35,0,0,0,28.31559480312316,-20.57248383023656Z"
                fill="rgb(230, 92, 0)"
              />
              <path
                class="speedo-segment"
                d="M48.196867402412494,-26.496452075594352A55,55,0,0,1,51.13770672385383,-20.24685039765728L32.5421770060888,-12.884359343963723A35,35,0,0,0,30.67073380153522,-16.86137859356004Z"
                fill="rgb(235, 75, 0)"
              />
              <path
                class="speedo-segment"
                d="M51.13770672385383,-20.24685039765728A55,55,0,0,1,53.272073862074706,-13.67794379406702L33.900410639502084,-8.704146050769921A35,35,0,0,0,32.5421770060888,-12.884359343963723Z"
                fill="rgb(240, 58, 0)"
              />
              <path
                class="speedo-segment"
                d="M53.272073862074706,-13.67794379406702A55,55,0,0,1,54.56630857229628,-6.8933278460367555L34.72401454600672,-4.386663174750662A35,35,0,0,0,33.900410639502084,-8.704146050769921Z"
                fill="rgb(245, 39, 0)"
              />
              <path
                class="speedo-segment"
                d="M54.56630857229628,-6.8933278460367555A55,55,0,0,1,55,0L35,0A35,35,0,0,0,34.72401454600672,-4.386663174750662Z"
                fill="rgb(250, 20, 0)"
              />
            </g>
            <g
              class="label"
              transform="translate(75,75)"
            >
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-90) translate(0,-65)"
              >
                0
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-54) translate(0,-65)"
              >
                10
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-18) translate(0,-65)"
              >
                20
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(18) translate(0,-65)"
              >
                30
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(54) translate(0,-65)"
              >
                40
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(90) translate(0,-65)"
              >
                50
              </text>
            </g>
            <g
              transform="translate(75,75)"
            >
              <text
                class="current-value"
                style="font-size: 16px; font-weight: bold; fill: #666;"
                text-anchor="middle"
                y="23"
              >
                10
              </text>
            </g>
            <g
              class="pointer"
              style="fill: #380100;"
              transform="translate(75,75)"
            >
              <path
                d="M5,0C3.333333333333333,-34,1.6666666666666667,-68,0,-68C-1.6666666666666667,-68,-3.333333333333333,0,-5,0C-3.333333333333333,0,-1.6666666666666667,5,0,5C1.6666666666666667,5,3.333333333333333,2.5,5,0"
                transform="rotate(-90)"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gauge__Wrapper-sc-895a5s-0 QCzOC"
    >
      <img
        src="/static/ambient_temperature.png"
      />
      <div>
        <svg
          class="speedometer"
          height="150"
          width="150"
        >
          <g
            class="arc"
            transform="translate(75,75)"
          >
            <path
              class="speedo-segment"
              d="M-55,-6.735557395310443e-15A55,55,0,0,1,-54.56630857229628,-6.893327846036749L-34.72401454600672,-4.386663174750659A35,35,0,0,0,-35,-4.2862637970157365e-15Z"
              fill="rgb(0, 128, 0)"
            />
            <path
              class="speedo-segment"
              d="M-54.56630857229628,-6.893327846036749A55,55,0,0,1,-53.272073862074706,-13.677943794067039L-33.900410639502084,-8.704146050769934A35,35,0,0,0,-34.72401454600672,-4.386663174750659Z"
              fill="rgb(11, 133, 0)"
            />
            <path
              class="speedo-segment"
              d="M-53.272073862074706,-13.677943794067039A55,55,0,0,1,-51.13770672385383,-20.246850397657276L-32.5421770060888,-12.884359343963721A35,35,0,0,0,-33.900410639502084,-8.704146050769934Z"
              fill="rgb(22, 138, 0)"
            />
            <path
              class="speedo-segment"
              d="M-51.13770672385383,-20.246850397657276A55,55,0,0,1,-48.196867402412494,-26.496452075594338L-30.670733801535224,-16.861378593560033A35,35,0,0,0,-32.5421770060888,-12.884359343963721Z"
              fill="rgb(34, 143, 0)"
            />
            <path
              class="speedo-segment"
              d="M-48.196867402412494,-26.496452075594338A55,55,0,0,1,-44.49593469062211,-32.32818887608603L-28.315594803123158,-20.572483830236564A35,35,0,0,0,-30.670733801535224,-16.861378593560033Z"
              fill="rgb(47, 148, 0)"
            />
            <path
              class="speedo-segment"
              d="M-44.49593469062211,-32.32818887608603A55,55,0,0,1,-40.09327450817762,-37.650090826077886L-25.513901959749397,-23.95914870750411A35,35,0,0,0,-28.315594803123158,-20.572483830236564Z"
              fill="rgb(61, 153, 0)"
            />
            <path
              class="speedo-segment"
              d="M-40.09327450817762,-37.650090826077886A55,55,0,0,1,-35.05831943617792,-42.37822835266842L-22.309839641204128,-26.96796349715263A35,35,0,0,0,-25.513901959749397,-23.95914870750411Z"
              fill="rgb(76, 158, 0)"
            />
            <path
              class="speedo-segment"
              d="M-35.05831943617792,-42.37822835266842A55,55,0,0,1,-29.470473723844805,-46.438035902610835L-18.753937824264874,-29.551477392570533A35,35,0,0,0,-22.309839641204128,-26.96796349715263Z"
              fill="rgb(92, 164, 0)"
            />
            <path
              class="speedo-segment"
              d="M-29.470473723844805,-46.438035902610835A55,55,0,0,1,-23.417861036079,-49.76548788563107L-14.902275204777546,-31.66894683631068A35,35,0,0,0,-18.753937824264874,-29.551477392570533Z"
              fill="rgb(108, 169, 0)"
            />
            <path
              class="speedo-segment"
              d="M-23.417861036079,-49.76548788563107A55,55,0,0,1,-16.995934690622104,-52.30810839623345L-10.815594803123156,-33.28697807033038A35,35,0,0,0,-14.902275204777546,-31.66894683631068Z"
              fill="rgb(125, 174, 0)"
            />
            <path
              class="speedo-segment"
              d="M-16.995934690622104,-52.30810839623345A55,55,0,0,1,-10.305972302214853,-54.02579879007788L-6.558346010500361,-34.3800537755041A35,35,0,0,0,-10.815594803123156,-33.28697807033038Z"
              fill="rgb(143, 179, 0)"
            />
            <path
              class="speedo-segment"
              d="M-10.305972302214853,-54.02579879007788A55,55,0,0,1,-3.453478574112237,-54.891470063554934L-2.1976681835259693,-34.930935494989505A35,35,0,0,0,-6.558346010500361,-34.3800537755041Z"
              fill="rgb(162, 184, 0)"
            />
            <path
              class="speedo-segment"
              d="M-3.453478574112237,-54.891470063554934A55,55,0,0,1,3.453478574112244,-54.891470063554934L2.1976681835259733,-34.930935494989505A35,35,0,0,0,-2.1976681835259693,-34.930935494989505Z"
              fill="rgb(181, 189, 0)"
            />
            <path
              class="speedo-segment"
              d="M3.453478574112244,-54.891470063554934A55,55,0,0,1,10.30597230221487,-54.02579879007787L6.558346010500372,-34.3800537755041A35,35,0,0,0,2.1976681835259733,-34.930935494989505Z"
              fill="rgb(194, 186, 0)"
            />
            <path
              class="speedo-segment"
              d="M10.30597230221487,-54.02579879007787A55,55,0,0,1,16.99593469062211,-52.30810839623344L10.815594803123162,-33.28697807033037A35,35,0,0,0,6.558346010500372,-34.3800537755041Z"
              fill="rgb(199, 175, 0)"
            />
            <path
              class="speedo-segment"
              d="M16.99593469062211,-52.30810839623344A55,55,0,0,1,23.417861036079007,-49.76548788563107L14.902275204777549,-31.66894683631068A35,35,0,0,0,10.815594803123162,-33.28697807033037Z"
              fill="rgb(204, 163, 0)"
            />
            <path
              class="speedo-segment"
              d="M23.417861036079007,-49.76548788563107A55,55,0,0,1,29.470473723844822,-46.43803590261082L18.753937824264888,-29.551477392570522A35,35,0,0,0,14.902275204777549,-31.66894683631068Z"
              fill="rgb(209, 151, 0)"
            />
            <path
              class="speedo-segment"
              d="M29.470473723844822,-46.43803590261082A55,55,0,0,1,35.05831943617793,-42.37822835266841L22.30983964120414,-26.967963497152624A35,35,0,0,0,18.753937824264888,-29.551477392570522Z"
              fill="rgb(214, 137, 0)"
            />
            <path
              class="speedo-segment"
              d="M35.05831943617793,-42.37822835266841A55,55,0,0,1,40.09327450817764,-37.650090826077864L25.513901959749408,-23.9591487075041A35,35,0,0,0,22.30983964120414,-26.967963497152624Z"
              fill="rgb(219, 123, 0)"
            />
            <path
              class="speedo-segment"
              d="M40.09327450817764,-37.650090826077864A55,55,0,0,1,44.49593469062211,-32.328188876086024L28.31559480312316,-20.57248383023656A35,35,0,0,0,25.513901959749408,-23.9591487075041Z"
              fill="rgb(225, 108, 0)"
            />
            <path
              class="speedo-segment"
              d="M44.49593469062211,-32.328188876086024A55,55,0,0,1,48.196867402412494,-26.496452075594352L30.67073380153522,-16.86137859356004A35,35,0,0,0,28.31559480312316,-20.57248383023656Z"
              fill="rgb(230, 92, 0)"
            />
            <path
              class="speedo-segment"
              d="M48.196867402412494,-26.496452075594352A55,55,0,0,1,51.13770672385383,-20.24685039765728L32.5421770060888,-12.884359343963723A35,35,0,0,0,30.67073380153522,-16.86137859356004Z"
              fill="rgb(235, 75, 0)"
            />
            <path
              class="speedo-segment"
              d="M51.13770672385383,-20.24685039765728A55,55,0,0,1,53.272073862074706,-13.67794379406702L33.900410639502084,-8.704146050769921A35,35,0,0,0,32.5421770060888,-12.884359343963723Z"
              fill="rgb(240, 58, 0)"
            />
            <path
              class="speedo-segment"
              d="M53.272073862074706,-13.67794379406702A55,55,0,0,1,54.56630857229628,-6.8933278460367555L34.72401454600672,-4.386663174750662A35,35,0,0,0,33.900410639502084,-8.704146050769921Z"
              fill="rgb(245, 39, 0)"
            />
            <path
              class="speedo-segment"
              d="M54.56630857229628,-6.8933278460367555A55,55,0,0,1,55,0L35,0A35,35,0,0,0,34.72401454600672,-4.386663174750662Z"
              fill="rgb(250, 20, 0)"
            />
          </g>
          <g
            class="label"
            transform="translate(75,75)"
          >
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(-90) translate(0,-65)"
            >
              0
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(-54) translate(0,-65)"
            >
              10
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(-18) translate(0,-65)"
            >
              20
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(18) translate(0,-65)"
            >
              30
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(54) translate(0,-65)"
            >
              40
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(90) translate(0,-65)"
            >
              50
            </text>
          </g>
          <g
            transform="translate(75,75)"
          >
            <text
              class="current-value"
              style="font-size: 16px; font-weight: bold; fill: #666;"
              text-anchor="middle"
              y="23"
            >
              10
            </text>
          </g>
          <g
            class="pointer"
            style="fill: #380100;"
            transform="translate(75,75)"
          >
            <path
              d="M5,0C3.333333333333333,-34,1.6666666666666667,-68,0,-68C-1.6666666666666667,-68,-3.333333333333333,0,-5,0C-3.333333333333333,0,-1.6666666666666667,5,0,5C1.6666666666666667,5,3.333333333333333,2.5,5,0"
              transform="rotate(-90)"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Gauge should render with defined height 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gauge__Wrapper-sc-895a5s-0 QCzOC"
      >
        <img
          src="/static/ambient_temperature.png"
        />
        <div>
          <svg
            class="speedometer"
            height="150"
            width="150"
          >
            <g
              class="arc"
              transform="translate(75,75)"
            >
              <path
                class="speedo-segment"
                d="M-55,-6.735557395310443e-15A55,55,0,0,1,-54.56630857229628,-6.893327846036749L-34.72401454600672,-4.386663174750659A35,35,0,0,0,-35,-4.2862637970157365e-15Z"
                fill="rgb(0, 128, 0)"
              />
              <path
                class="speedo-segment"
                d="M-54.56630857229628,-6.893327846036749A55,55,0,0,1,-53.272073862074706,-13.677943794067039L-33.900410639502084,-8.704146050769934A35,35,0,0,0,-34.72401454600672,-4.386663174750659Z"
                fill="rgb(11, 133, 0)"
              />
              <path
                class="speedo-segment"
                d="M-53.272073862074706,-13.677943794067039A55,55,0,0,1,-51.13770672385383,-20.246850397657276L-32.5421770060888,-12.884359343963721A35,35,0,0,0,-33.900410639502084,-8.704146050769934Z"
                fill="rgb(22, 138, 0)"
              />
              <path
                class="speedo-segment"
                d="M-51.13770672385383,-20.246850397657276A55,55,0,0,1,-48.196867402412494,-26.496452075594338L-30.670733801535224,-16.861378593560033A35,35,0,0,0,-32.5421770060888,-12.884359343963721Z"
                fill="rgb(34, 143, 0)"
              />
              <path
                class="speedo-segment"
                d="M-48.196867402412494,-26.496452075594338A55,55,0,0,1,-44.49593469062211,-32.32818887608603L-28.315594803123158,-20.572483830236564A35,35,0,0,0,-30.670733801535224,-16.861378593560033Z"
                fill="rgb(47, 148, 0)"
              />
              <path
                class="speedo-segment"
                d="M-44.49593469062211,-32.32818887608603A55,55,0,0,1,-40.09327450817762,-37.650090826077886L-25.513901959749397,-23.95914870750411A35,35,0,0,0,-28.315594803123158,-20.572483830236564Z"
                fill="rgb(61, 153, 0)"
              />
              <path
                class="speedo-segment"
                d="M-40.09327450817762,-37.650090826077886A55,55,0,0,1,-35.05831943617792,-42.37822835266842L-22.309839641204128,-26.96796349715263A35,35,0,0,0,-25.513901959749397,-23.95914870750411Z"
                fill="rgb(76, 158, 0)"
              />
              <path
                class="speedo-segment"
                d="M-35.05831943617792,-42.37822835266842A55,55,0,0,1,-29.470473723844805,-46.438035902610835L-18.753937824264874,-29.551477392570533A35,35,0,0,0,-22.309839641204128,-26.96796349715263Z"
                fill="rgb(92, 164, 0)"
              />
              <path
                class="speedo-segment"
                d="M-29.470473723844805,-46.438035902610835A55,55,0,0,1,-23.417861036079,-49.76548788563107L-14.902275204777546,-31.66894683631068A35,35,0,0,0,-18.753937824264874,-29.551477392570533Z"
                fill="rgb(108, 169, 0)"
              />
              <path
                class="speedo-segment"
                d="M-23.417861036079,-49.76548788563107A55,55,0,0,1,-16.995934690622104,-52.30810839623345L-10.815594803123156,-33.28697807033038A35,35,0,0,0,-14.902275204777546,-31.66894683631068Z"
                fill="rgb(125, 174, 0)"
              />
              <path
                class="speedo-segment"
                d="M-16.995934690622104,-52.30810839623345A55,55,0,0,1,-10.305972302214853,-54.02579879007788L-6.558346010500361,-34.3800537755041A35,35,0,0,0,-10.815594803123156,-33.28697807033038Z"
                fill="rgb(143, 179, 0)"
              />
              <path
                class="speedo-segment"
                d="M-10.305972302214853,-54.02579879007788A55,55,0,0,1,-3.453478574112237,-54.891470063554934L-2.1976681835259693,-34.930935494989505A35,35,0,0,0,-6.558346010500361,-34.3800537755041Z"
                fill="rgb(162, 184, 0)"
              />
              <path
                class="speedo-segment"
                d="M-3.453478574112237,-54.891470063554934A55,55,0,0,1,3.453478574112244,-54.891470063554934L2.1976681835259733,-34.930935494989505A35,35,0,0,0,-2.1976681835259693,-34.930935494989505Z"
                fill="rgb(181, 189, 0)"
              />
              <path
                class="speedo-segment"
                d="M3.453478574112244,-54.891470063554934A55,55,0,0,1,10.30597230221487,-54.02579879007787L6.558346010500372,-34.3800537755041A35,35,0,0,0,2.1976681835259733,-34.930935494989505Z"
                fill="rgb(194, 186, 0)"
              />
              <path
                class="speedo-segment"
                d="M10.30597230221487,-54.02579879007787A55,55,0,0,1,16.99593469062211,-52.30810839623344L10.815594803123162,-33.28697807033037A35,35,0,0,0,6.558346010500372,-34.3800537755041Z"
                fill="rgb(199, 175, 0)"
              />
              <path
                class="speedo-segment"
                d="M16.99593469062211,-52.30810839623344A55,55,0,0,1,23.417861036079007,-49.76548788563107L14.902275204777549,-31.66894683631068A35,35,0,0,0,10.815594803123162,-33.28697807033037Z"
                fill="rgb(204, 163, 0)"
              />
              <path
                class="speedo-segment"
                d="M23.417861036079007,-49.76548788563107A55,55,0,0,1,29.470473723844822,-46.43803590261082L18.753937824264888,-29.551477392570522A35,35,0,0,0,14.902275204777549,-31.66894683631068Z"
                fill="rgb(209, 151, 0)"
              />
              <path
                class="speedo-segment"
                d="M29.470473723844822,-46.43803590261082A55,55,0,0,1,35.05831943617793,-42.37822835266841L22.30983964120414,-26.967963497152624A35,35,0,0,0,18.753937824264888,-29.551477392570522Z"
                fill="rgb(214, 137, 0)"
              />
              <path
                class="speedo-segment"
                d="M35.05831943617793,-42.37822835266841A55,55,0,0,1,40.09327450817764,-37.650090826077864L25.513901959749408,-23.9591487075041A35,35,0,0,0,22.30983964120414,-26.967963497152624Z"
                fill="rgb(219, 123, 0)"
              />
              <path
                class="speedo-segment"
                d="M40.09327450817764,-37.650090826077864A55,55,0,0,1,44.49593469062211,-32.328188876086024L28.31559480312316,-20.57248383023656A35,35,0,0,0,25.513901959749408,-23.9591487075041Z"
                fill="rgb(225, 108, 0)"
              />
              <path
                class="speedo-segment"
                d="M44.49593469062211,-32.328188876086024A55,55,0,0,1,48.196867402412494,-26.496452075594352L30.67073380153522,-16.86137859356004A35,35,0,0,0,28.31559480312316,-20.57248383023656Z"
                fill="rgb(230, 92, 0)"
              />
              <path
                class="speedo-segment"
                d="M48.196867402412494,-26.496452075594352A55,55,0,0,1,51.13770672385383,-20.24685039765728L32.5421770060888,-12.884359343963723A35,35,0,0,0,30.67073380153522,-16.86137859356004Z"
                fill="rgb(235, 75, 0)"
              />
              <path
                class="speedo-segment"
                d="M51.13770672385383,-20.24685039765728A55,55,0,0,1,53.272073862074706,-13.67794379406702L33.900410639502084,-8.704146050769921A35,35,0,0,0,32.5421770060888,-12.884359343963723Z"
                fill="rgb(240, 58, 0)"
              />
              <path
                class="speedo-segment"
                d="M53.272073862074706,-13.67794379406702A55,55,0,0,1,54.56630857229628,-6.8933278460367555L34.72401454600672,-4.386663174750662A35,35,0,0,0,33.900410639502084,-8.704146050769921Z"
                fill="rgb(245, 39, 0)"
              />
              <path
                class="speedo-segment"
                d="M54.56630857229628,-6.8933278460367555A55,55,0,0,1,55,0L35,0A35,35,0,0,0,34.72401454600672,-4.386663174750662Z"
                fill="rgb(250, 20, 0)"
              />
            </g>
            <g
              class="label"
              transform="translate(75,75)"
            >
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-90) translate(0,-65)"
              >
                0
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-54) translate(0,-65)"
              >
                10
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-18) translate(0,-65)"
              >
                20
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(18) translate(0,-65)"
              >
                30
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(54) translate(0,-65)"
              >
                40
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(90) translate(0,-65)"
              >
                50
              </text>
            </g>
            <g
              transform="translate(75,75)"
            >
              <text
                class="current-value"
                style="font-size: 16px; font-weight: bold; fill: #666;"
                text-anchor="middle"
                y="23"
              >
                10
              </text>
            </g>
            <g
              class="pointer"
              style="fill: #380100;"
              transform="translate(75,75)"
            >
              <path
                d="M5,0C3.333333333333333,-34,1.6666666666666667,-68,0,-68C-1.6666666666666667,-68,-3.333333333333333,0,-5,0C-3.333333333333333,0,-1.6666666666666667,5,0,5C1.6666666666666667,5,3.333333333333333,2.5,5,0"
                transform="rotate(-90)"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        class="gauge__Wrapper-sc-895a5s-0 bSMtcv"
        height="150px"
      >
        <img
          src="/static/ambient_temperature.png"
        />
        <div>
          <svg
            class="speedometer"
            height="150"
            width="150"
          >
            <g
              class="arc"
              transform="translate(75,75)"
            >
              <path
                class="speedo-segment"
                d="M-55,-6.735557395310443e-15A55,55,0,0,1,-54.56630857229628,-6.893327846036749L-34.72401454600672,-4.386663174750659A35,35,0,0,0,-35,-4.2862637970157365e-15Z"
                fill="rgb(0, 128, 0)"
              />
              <path
                class="speedo-segment"
                d="M-54.56630857229628,-6.893327846036749A55,55,0,0,1,-53.272073862074706,-13.677943794067039L-33.900410639502084,-8.704146050769934A35,35,0,0,0,-34.72401454600672,-4.386663174750659Z"
                fill="rgb(11, 133, 0)"
              />
              <path
                class="speedo-segment"
                d="M-53.272073862074706,-13.677943794067039A55,55,0,0,1,-51.13770672385383,-20.246850397657276L-32.5421770060888,-12.884359343963721A35,35,0,0,0,-33.900410639502084,-8.704146050769934Z"
                fill="rgb(22, 138, 0)"
              />
              <path
                class="speedo-segment"
                d="M-51.13770672385383,-20.246850397657276A55,55,0,0,1,-48.196867402412494,-26.496452075594338L-30.670733801535224,-16.861378593560033A35,35,0,0,0,-32.5421770060888,-12.884359343963721Z"
                fill="rgb(34, 143, 0)"
              />
              <path
                class="speedo-segment"
                d="M-48.196867402412494,-26.496452075594338A55,55,0,0,1,-44.49593469062211,-32.32818887608603L-28.315594803123158,-20.572483830236564A35,35,0,0,0,-30.670733801535224,-16.861378593560033Z"
                fill="rgb(47, 148, 0)"
              />
              <path
                class="speedo-segment"
                d="M-44.49593469062211,-32.32818887608603A55,55,0,0,1,-40.09327450817762,-37.650090826077886L-25.513901959749397,-23.95914870750411A35,35,0,0,0,-28.315594803123158,-20.572483830236564Z"
                fill="rgb(61, 153, 0)"
              />
              <path
                class="speedo-segment"
                d="M-40.09327450817762,-37.650090826077886A55,55,0,0,1,-35.05831943617792,-42.37822835266842L-22.309839641204128,-26.96796349715263A35,35,0,0,0,-25.513901959749397,-23.95914870750411Z"
                fill="rgb(76, 158, 0)"
              />
              <path
                class="speedo-segment"
                d="M-35.05831943617792,-42.37822835266842A55,55,0,0,1,-29.470473723844805,-46.438035902610835L-18.753937824264874,-29.551477392570533A35,35,0,0,0,-22.309839641204128,-26.96796349715263Z"
                fill="rgb(92, 164, 0)"
              />
              <path
                class="speedo-segment"
                d="M-29.470473723844805,-46.438035902610835A55,55,0,0,1,-23.417861036079,-49.76548788563107L-14.902275204777546,-31.66894683631068A35,35,0,0,0,-18.753937824264874,-29.551477392570533Z"
                fill="rgb(108, 169, 0)"
              />
              <path
                class="speedo-segment"
                d="M-23.417861036079,-49.76548788563107A55,55,0,0,1,-16.995934690622104,-52.30810839623345L-10.815594803123156,-33.28697807033038A35,35,0,0,0,-14.902275204777546,-31.66894683631068Z"
                fill="rgb(125, 174, 0)"
              />
              <path
                class="speedo-segment"
                d="M-16.995934690622104,-52.30810839623345A55,55,0,0,1,-10.305972302214853,-54.02579879007788L-6.558346010500361,-34.3800537755041A35,35,0,0,0,-10.815594803123156,-33.28697807033038Z"
                fill="rgb(143, 179, 0)"
              />
              <path
                class="speedo-segment"
                d="M-10.305972302214853,-54.02579879007788A55,55,0,0,1,-3.453478574112237,-54.891470063554934L-2.1976681835259693,-34.930935494989505A35,35,0,0,0,-6.558346010500361,-34.3800537755041Z"
                fill="rgb(162, 184, 0)"
              />
              <path
                class="speedo-segment"
                d="M-3.453478574112237,-54.891470063554934A55,55,0,0,1,3.453478574112244,-54.891470063554934L2.1976681835259733,-34.930935494989505A35,35,0,0,0,-2.1976681835259693,-34.930935494989505Z"
                fill="rgb(181, 189, 0)"
              />
              <path
                class="speedo-segment"
                d="M3.453478574112244,-54.891470063554934A55,55,0,0,1,10.30597230221487,-54.02579879007787L6.558346010500372,-34.3800537755041A35,35,0,0,0,2.1976681835259733,-34.930935494989505Z"
                fill="rgb(194, 186, 0)"
              />
              <path
                class="speedo-segment"
                d="M10.30597230221487,-54.02579879007787A55,55,0,0,1,16.99593469062211,-52.30810839623344L10.815594803123162,-33.28697807033037A35,35,0,0,0,6.558346010500372,-34.3800537755041Z"
                fill="rgb(199, 175, 0)"
              />
              <path
                class="speedo-segment"
                d="M16.99593469062211,-52.30810839623344A55,55,0,0,1,23.417861036079007,-49.76548788563107L14.902275204777549,-31.66894683631068A35,35,0,0,0,10.815594803123162,-33.28697807033037Z"
                fill="rgb(204, 163, 0)"
              />
              <path
                class="speedo-segment"
                d="M23.417861036079007,-49.76548788563107A55,55,0,0,1,29.470473723844822,-46.43803590261082L18.753937824264888,-29.551477392570522A35,35,0,0,0,14.902275204777549,-31.66894683631068Z"
                fill="rgb(209, 151, 0)"
              />
              <path
                class="speedo-segment"
                d="M29.470473723844822,-46.43803590261082A55,55,0,0,1,35.05831943617793,-42.37822835266841L22.30983964120414,-26.967963497152624A35,35,0,0,0,18.753937824264888,-29.551477392570522Z"
                fill="rgb(214, 137, 0)"
              />
              <path
                class="speedo-segment"
                d="M35.05831943617793,-42.37822835266841A55,55,0,0,1,40.09327450817764,-37.650090826077864L25.513901959749408,-23.9591487075041A35,35,0,0,0,22.30983964120414,-26.967963497152624Z"
                fill="rgb(219, 123, 0)"
              />
              <path
                class="speedo-segment"
                d="M40.09327450817764,-37.650090826077864A55,55,0,0,1,44.49593469062211,-32.328188876086024L28.31559480312316,-20.57248383023656A35,35,0,0,0,25.513901959749408,-23.9591487075041Z"
                fill="rgb(225, 108, 0)"
              />
              <path
                class="speedo-segment"
                d="M44.49593469062211,-32.328188876086024A55,55,0,0,1,48.196867402412494,-26.496452075594352L30.67073380153522,-16.86137859356004A35,35,0,0,0,28.31559480312316,-20.57248383023656Z"
                fill="rgb(230, 92, 0)"
              />
              <path
                class="speedo-segment"
                d="M48.196867402412494,-26.496452075594352A55,55,0,0,1,51.13770672385383,-20.24685039765728L32.5421770060888,-12.884359343963723A35,35,0,0,0,30.67073380153522,-16.86137859356004Z"
                fill="rgb(235, 75, 0)"
              />
              <path
                class="speedo-segment"
                d="M51.13770672385383,-20.24685039765728A55,55,0,0,1,53.272073862074706,-13.67794379406702L33.900410639502084,-8.704146050769921A35,35,0,0,0,32.5421770060888,-12.884359343963723Z"
                fill="rgb(240, 58, 0)"
              />
              <path
                class="speedo-segment"
                d="M53.272073862074706,-13.67794379406702A55,55,0,0,1,54.56630857229628,-6.8933278460367555L34.72401454600672,-4.386663174750662A35,35,0,0,0,33.900410639502084,-8.704146050769921Z"
                fill="rgb(245, 39, 0)"
              />
              <path
                class="speedo-segment"
                d="M54.56630857229628,-6.8933278460367555A55,55,0,0,1,55,0L35,0A35,35,0,0,0,34.72401454600672,-4.386663174750662Z"
                fill="rgb(250, 20, 0)"
              />
            </g>
            <g
              class="label"
              transform="translate(75,75)"
            >
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-90) translate(0,-65)"
              >
                0
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-54) translate(0,-65)"
              >
                10
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(-18) translate(0,-65)"
              >
                20
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(18) translate(0,-65)"
              >
                30
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(54) translate(0,-65)"
              >
                40
              </text>
              <text
                class="segment-value"
                style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
                transform="rotate(90) translate(0,-65)"
              >
                50
              </text>
            </g>
            <g
              transform="translate(75,75)"
            >
              <text
                class="current-value"
                style="font-size: 16px; font-weight: bold; fill: #666;"
                text-anchor="middle"
                y="23"
              >
                10
              </text>
            </g>
            <g
              class="pointer"
              style="fill: #380100;"
              transform="translate(75,75)"
            >
              <path
                d="M5,0C3.333333333333333,-34,1.6666666666666667,-68,0,-68C-1.6666666666666667,-68,-3.333333333333333,0,-5,0C-3.333333333333333,0,-1.6666666666666667,5,0,5C1.6666666666666667,5,3.333333333333333,2.5,5,0"
                transform="rotate(-90)"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gauge__Wrapper-sc-895a5s-0 bSMtcv"
      height="150px"
    >
      <img
        src="/static/ambient_temperature.png"
      />
      <div>
        <svg
          class="speedometer"
          height="150"
          width="150"
        >
          <g
            class="arc"
            transform="translate(75,75)"
          >
            <path
              class="speedo-segment"
              d="M-55,-6.735557395310443e-15A55,55,0,0,1,-54.56630857229628,-6.893327846036749L-34.72401454600672,-4.386663174750659A35,35,0,0,0,-35,-4.2862637970157365e-15Z"
              fill="rgb(0, 128, 0)"
            />
            <path
              class="speedo-segment"
              d="M-54.56630857229628,-6.893327846036749A55,55,0,0,1,-53.272073862074706,-13.677943794067039L-33.900410639502084,-8.704146050769934A35,35,0,0,0,-34.72401454600672,-4.386663174750659Z"
              fill="rgb(11, 133, 0)"
            />
            <path
              class="speedo-segment"
              d="M-53.272073862074706,-13.677943794067039A55,55,0,0,1,-51.13770672385383,-20.246850397657276L-32.5421770060888,-12.884359343963721A35,35,0,0,0,-33.900410639502084,-8.704146050769934Z"
              fill="rgb(22, 138, 0)"
            />
            <path
              class="speedo-segment"
              d="M-51.13770672385383,-20.246850397657276A55,55,0,0,1,-48.196867402412494,-26.496452075594338L-30.670733801535224,-16.861378593560033A35,35,0,0,0,-32.5421770060888,-12.884359343963721Z"
              fill="rgb(34, 143, 0)"
            />
            <path
              class="speedo-segment"
              d="M-48.196867402412494,-26.496452075594338A55,55,0,0,1,-44.49593469062211,-32.32818887608603L-28.315594803123158,-20.572483830236564A35,35,0,0,0,-30.670733801535224,-16.861378593560033Z"
              fill="rgb(47, 148, 0)"
            />
            <path
              class="speedo-segment"
              d="M-44.49593469062211,-32.32818887608603A55,55,0,0,1,-40.09327450817762,-37.650090826077886L-25.513901959749397,-23.95914870750411A35,35,0,0,0,-28.315594803123158,-20.572483830236564Z"
              fill="rgb(61, 153, 0)"
            />
            <path
              class="speedo-segment"
              d="M-40.09327450817762,-37.650090826077886A55,55,0,0,1,-35.05831943617792,-42.37822835266842L-22.309839641204128,-26.96796349715263A35,35,0,0,0,-25.513901959749397,-23.95914870750411Z"
              fill="rgb(76, 158, 0)"
            />
            <path
              class="speedo-segment"
              d="M-35.05831943617792,-42.37822835266842A55,55,0,0,1,-29.470473723844805,-46.438035902610835L-18.753937824264874,-29.551477392570533A35,35,0,0,0,-22.309839641204128,-26.96796349715263Z"
              fill="rgb(92, 164, 0)"
            />
            <path
              class="speedo-segment"
              d="M-29.470473723844805,-46.438035902610835A55,55,0,0,1,-23.417861036079,-49.76548788563107L-14.902275204777546,-31.66894683631068A35,35,0,0,0,-18.753937824264874,-29.551477392570533Z"
              fill="rgb(108, 169, 0)"
            />
            <path
              class="speedo-segment"
              d="M-23.417861036079,-49.76548788563107A55,55,0,0,1,-16.995934690622104,-52.30810839623345L-10.815594803123156,-33.28697807033038A35,35,0,0,0,-14.902275204777546,-31.66894683631068Z"
              fill="rgb(125, 174, 0)"
            />
            <path
              class="speedo-segment"
              d="M-16.995934690622104,-52.30810839623345A55,55,0,0,1,-10.305972302214853,-54.02579879007788L-6.558346010500361,-34.3800537755041A35,35,0,0,0,-10.815594803123156,-33.28697807033038Z"
              fill="rgb(143, 179, 0)"
            />
            <path
              class="speedo-segment"
              d="M-10.305972302214853,-54.02579879007788A55,55,0,0,1,-3.453478574112237,-54.891470063554934L-2.1976681835259693,-34.930935494989505A35,35,0,0,0,-6.558346010500361,-34.3800537755041Z"
              fill="rgb(162, 184, 0)"
            />
            <path
              class="speedo-segment"
              d="M-3.453478574112237,-54.891470063554934A55,55,0,0,1,3.453478574112244,-54.891470063554934L2.1976681835259733,-34.930935494989505A35,35,0,0,0,-2.1976681835259693,-34.930935494989505Z"
              fill="rgb(181, 189, 0)"
            />
            <path
              class="speedo-segment"
              d="M3.453478574112244,-54.891470063554934A55,55,0,0,1,10.30597230221487,-54.02579879007787L6.558346010500372,-34.3800537755041A35,35,0,0,0,2.1976681835259733,-34.930935494989505Z"
              fill="rgb(194, 186, 0)"
            />
            <path
              class="speedo-segment"
              d="M10.30597230221487,-54.02579879007787A55,55,0,0,1,16.99593469062211,-52.30810839623344L10.815594803123162,-33.28697807033037A35,35,0,0,0,6.558346010500372,-34.3800537755041Z"
              fill="rgb(199, 175, 0)"
            />
            <path
              class="speedo-segment"
              d="M16.99593469062211,-52.30810839623344A55,55,0,0,1,23.417861036079007,-49.76548788563107L14.902275204777549,-31.66894683631068A35,35,0,0,0,10.815594803123162,-33.28697807033037Z"
              fill="rgb(204, 163, 0)"
            />
            <path
              class="speedo-segment"
              d="M23.417861036079007,-49.76548788563107A55,55,0,0,1,29.470473723844822,-46.43803590261082L18.753937824264888,-29.551477392570522A35,35,0,0,0,14.902275204777549,-31.66894683631068Z"
              fill="rgb(209, 151, 0)"
            />
            <path
              class="speedo-segment"
              d="M29.470473723844822,-46.43803590261082A55,55,0,0,1,35.05831943617793,-42.37822835266841L22.30983964120414,-26.967963497152624A35,35,0,0,0,18.753937824264888,-29.551477392570522Z"
              fill="rgb(214, 137, 0)"
            />
            <path
              class="speedo-segment"
              d="M35.05831943617793,-42.37822835266841A55,55,0,0,1,40.09327450817764,-37.650090826077864L25.513901959749408,-23.9591487075041A35,35,0,0,0,22.30983964120414,-26.967963497152624Z"
              fill="rgb(219, 123, 0)"
            />
            <path
              class="speedo-segment"
              d="M40.09327450817764,-37.650090826077864A55,55,0,0,1,44.49593469062211,-32.328188876086024L28.31559480312316,-20.57248383023656A35,35,0,0,0,25.513901959749408,-23.9591487075041Z"
              fill="rgb(225, 108, 0)"
            />
            <path
              class="speedo-segment"
              d="M44.49593469062211,-32.328188876086024A55,55,0,0,1,48.196867402412494,-26.496452075594352L30.67073380153522,-16.86137859356004A35,35,0,0,0,28.31559480312316,-20.57248383023656Z"
              fill="rgb(230, 92, 0)"
            />
            <path
              class="speedo-segment"
              d="M48.196867402412494,-26.496452075594352A55,55,0,0,1,51.13770672385383,-20.24685039765728L32.5421770060888,-12.884359343963723A35,35,0,0,0,30.67073380153522,-16.86137859356004Z"
              fill="rgb(235, 75, 0)"
            />
            <path
              class="speedo-segment"
              d="M51.13770672385383,-20.24685039765728A55,55,0,0,1,53.272073862074706,-13.67794379406702L33.900410639502084,-8.704146050769921A35,35,0,0,0,32.5421770060888,-12.884359343963723Z"
              fill="rgb(240, 58, 0)"
            />
            <path
              class="speedo-segment"
              d="M53.272073862074706,-13.67794379406702A55,55,0,0,1,54.56630857229628,-6.8933278460367555L34.72401454600672,-4.386663174750662A35,35,0,0,0,33.900410639502084,-8.704146050769921Z"
              fill="rgb(245, 39, 0)"
            />
            <path
              class="speedo-segment"
              d="M54.56630857229628,-6.8933278460367555A55,55,0,0,1,55,0L35,0A35,35,0,0,0,34.72401454600672,-4.386663174750662Z"
              fill="rgb(250, 20, 0)"
            />
          </g>
          <g
            class="label"
            transform="translate(75,75)"
          >
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(-90) translate(0,-65)"
            >
              0
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(-54) translate(0,-65)"
            >
              10
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(-18) translate(0,-65)"
            >
              20
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(18) translate(0,-65)"
            >
              30
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(54) translate(0,-65)"
            >
              40
            </text>
            <text
              class="segment-value"
              style="text-anchor: middle; font-size: 14px; font-weight: bold; fill: #666;"
              transform="rotate(90) translate(0,-65)"
            >
              50
            </text>
          </g>
          <g
            transform="translate(75,75)"
          >
            <text
              class="current-value"
              style="font-size: 16px; font-weight: bold; fill: #666;"
              text-anchor="middle"
              y="23"
            >
              10
            </text>
          </g>
          <g
            class="pointer"
            style="fill: #380100;"
            transform="translate(75,75)"
          >
            <path
              d="M5,0C3.333333333333333,-34,1.6666666666666667,-68,0,-68C-1.6666666666666667,-68,-3.333333333333333,0,-5,0C-3.333333333333333,0,-1.6666666666666667,5,0,5C1.6666666666666667,5,3.333333333333333,2.5,5,0"
              transform="rotate(-90)"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
